k8s-manifests/ingress.yaml
# This ingress resource creates a application load balancer with a single HTTPS 443 listener using the ACM certificate.
# The listener rules will have host based routing to the fleetman-webapp service.
# If host is "fleetman.priyanshiseniordevops.online", it will route to the fleetman-webapp target group - where the webapp pod ip is registered.
# so traffic will be routed to the webapp pod ip via the ALB.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleetman-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:331860160408:certificate/8b217ec7-9f23-45f6-bcf0-0603c77ba462
spec:
  ingressClassName: alb
  rules:
    - host: fleetman.priyanshiseniordevops.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-webapp
                port:
                  number: 80

# target-type IP means the ALB registers pod IPs directly in the target group.
# This Ingress creates only an HTTPS 443 listener using the ACM certificate above.
